fix height of sections on small, wide screens

--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -1,5 +1,5 @@
 .section4 {
-    height: calc(100vh - 80px);
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
