--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -8,6 +8,7 @@
 #stylingDiv {
     display: flex;
     margin-left: 3%;
+    position: absolute;
 }
 
 #headerDiv {
