--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -1,5 +1,5 @@
 .section3 {
-    height: calc(100vh - 50px);
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
